[project]
name = "tradeutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mathematics",
    "pandasutils",
    "statsmodels>=0.14.4",
    "ta-lib>=0.5.4",
]
[project.optional-dependencies]
dev = [
  "pytest",           # 开发依赖
  "pytest-cov",       # 测试覆盖率工具
]
[tool.uv.sources]
mathematics = { git = "https://github.com/731315163/mathematics.git" }
pandasutils = { git = "https://github.com/731315163/pandasutils.git" }

